apps/base/crafty/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: crafty
    namespace: apps
spec:
    type: ClusterIP
    selector:
        app: crafty
    ports:
        - name: webui
          port: 443
          targetPort: 8443
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
    name: crafty-servers
    namespace: apps
spec:
    type: NodePort
    externalTrafficPolicy: Local
    selector:
        app: crafty
    ports:
        - name: server-0
          port: 27027
          nodePort: 27027
          targetPort: 25500
        - name: server-1
          port: 27028
          nodePort: 27028
          targetPort: 25501
        - name: server-2
          port: 27029
          nodePort: 27029
          targetPort: 25502
        - name: server-3
          port: 27030
          nodePort: 27030
          targetPort: 25503
        - name: server-4
          port: 27031
          nodePort: 27031
          targetPort: 25504
        - name: geyser-0
          port: 27020
          nodePort: 27020
          targetPort: 25520
          protocol: UDP
